chore(Api): create RsiIndicator
